Dark mode bounce overflow fix

--- a/static/base.css
+++ b/static/base.css
@@ -5,6 +5,13 @@
 
 body {
     font-family: "JetBrains Mono", serif;
+    height: 100vh;
+    overflow: auto;
+}
+
+html {
+    height: 100vh;
+    overflow: hidden;
 }
 
 .vertical-navbar {
